SNI-7615, SNI-7866, DD-40097, DD-39685, DD-39704 Fix (#1224)